2006-10-04 00:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Make connection to 
	fileType in GormFilePrefsManager.
	* GormCore/GormDocumentController.m: Move the window when 
	"New Application" is selected.
	* GormCore/GormDocument.m: Add call in awakeFromNib
	to setFileTypeName:.
	* GormCore/GormFilePrefsManager.h: add setFileTypeName: and
	fileTypeName.
	* GormCore/GormFilePrefsManager.m: add setFileTypeName: and
	fileTypeName.
	* Palettes/4Data/GormTextViewEditor.m: Remove commented out 
	windowAndRect:forObject:

2006-10-01 23:07-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correct issue with class selection in 
	deleteSelection method.

2006-10-01 22:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Remove some extra classes.

2006-10-01 22:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Added section in file section
	to show fileType.
	* GormCore/GormFilePrefsManager.m: Changed version number from 
	1,1,0 to 1,1,2.
	* GormCore/GormInspectorsManager.m: Removed kludge from 
	setCurrentInspector:.
	* GormCore/GormScrollViewEditor.m: Remove code which returns 
	the table view editor in editorClassName.  In mouseDown:
	remove check in mouseDown: for NSScroller and subclasses.
	* GormCore/GormViewEditor.h: Declare frameDidChange:
	* Palettes/3Containers/GormTableViewEditor.m: Remove redundant
	implementation of performDragOperation:.  Call draggingUpdated 
	instead.
	* Palettes/4Data/DataPalette.m: Change minimum size.
	* Palettes/4Data/GormTextViewEditor.m: Add handleNotification: 
	and add initWithObject:inDocument:.

2006-09-30 23:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGModelWrapperLoader.m: Cleanup NSLog()
	calls.

2006-09-30 12:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.h: Added declaration findByClassName: