@@ -41,16 +41,17 @@
 - (id)initWithFrame:(NSRect)frameRect
 {
   self = [super initWithFrame: frameRect];
-
-  [self setBackgroundColor: [NSColor darkGrayColor]];
-  [self setTextColor: [NSColor whiteColor]];
-  [self setDrawsBackground: YES];
-  [self setAlignment: NSCenterTextAlignment];
-  [self setFont: [NSFont boldSystemFontOfSize: 0]];
-  [self setEditable: NO];
-  [self setSelectable: NO];
-  [self setClassName: @"CustomView"];
-  
+  if(self != nil)
+    {
+      [self setBackgroundColor: [NSColor darkGrayColor]];
+      [self setTextColor: [NSColor whiteColor]];
+      [self setDrawsBackground: YES];
+      [self setAlignment: NSCenterTextAlignment];
+      [self setFont: [NSFont boldSystemFontOfSize: 0]];
+      [self setEditable: NO];
+      [self setSelectable: NO];
+      [self setClassName: @"CustomView"];
+    }
   return self;
 }
 
